<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tenet</string>
    <string name="shortcut_note_short">Neue Notiz</string>
    <string name="shortcut_note_long">Neue Notiz schreiben</string>
    <string name="shortcut_meal_short">Mahlzeit</string>
    <string name="shortcut_meal_long">Mahlzeit loggen</string>
    <string name="shortcut_dream_short">Traum</string>
    <string name="shortcut_dream_long">Traum notieren</string>
    <string name="widget_feed_description">Woche aktiv, Schritte, Tenet-Form und Schlaf</string>
    <string name="widget_steps_description">Schritte heute</string>
    <string name="widget_form_description">Tenet-Form (eigener Erholungs-Score)</string>
    <string name="widget_sleep_description">Schlaf letzte Nacht</string>
</resources>
